<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "#bbcde3"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MnPacientName"
        android:textSize="25dp"
        android:id="@+id/NombreUsuario"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MnPacientDoctor"
        android:textSize="15dp"
        android:id="@+id/DoctorPaciente"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MnPacientClinic"
        android:textSize="15dp"
        android:id="@+id/ClinicaPaciente"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MnPacientCita"
        android:id="@+id/Proximamente"
        android:layout_margin="10pt"
        android:textColor="#ff000000"
        android:textSize="20dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:id="@+id/listView8"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.49" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MnPacientSintomas"
        android:id="@+id/sintomas"
        android:layout_gravity="center_horizontal"
        android:background="#ff9900"
        android:layout_margin="20px" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MnPacientDosis"
        android:id="@+id/dossis"
        android:layout_gravity="center_horizontal"
        android:background="#ff00ff00"
        android:layout_margin="20px" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MnPacientCuestionario"
        android:id="@+id/cuestionario"
        android:layout_gravity="center_horizontal"
        android:background="#ff0000ff"
        android:textColor="#ffffffff"
        android:layout_margin="20px" />
</LinearLayout>