<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.ub.pis2015.joseluisguillen.pis_int.Sintomas"
    android:orientation="vertical"
    android:background = "#bbcde3"
    android:weightSum="1">

    <TextView android:text="@string/sintomas_explica" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#ff000000"
        android:textSize="14dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="66dp"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addS"
            android:id="@+id/button6" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText21"
            android:layout_gravity="center_horizontal"
            android:hint="@string/NewSint"
            android:gravity="center_horizontal"
            android:textColor="#ff797979" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="292dp"
        android:id="@+id/listView7"
        android:layout_weight="0.40" />

</LinearLayout>
